First Relecture + Revelation.

--- a/latex/thesis_template/thesis.bib
+++ b/latex/thesis_template/thesis.bib
@@ -411,4 +411,21 @@ keywords={computer network security;learning (artificial intelligence);virtual
 ISSN={1558-2566}, 
 month={06},}
 
+@article{wood2014ethereum,
+  title={Ethereum: A secure decentralised generalised transaction ledger},
+  author={Wood, Gavin and others},
+  journal={Ethereum project yellow paper},
+  volume={151},
+  number={2014},
+  pages={1--32},
+  year={2014}
+}
+
+@article{Borge2017,
+author = {Borge, Maria and Kokoris-kogias, Eleftherios and Jovanovic, Philipp and Gasser, Linus and Gailly, Nicolas and Ford, Bryan},
+keywords = {-proof-of-personhood,blockchain,cryptocurrency,stake},
+title = {{Proof-of-Personhood : Redemocratizing Permissionless Cryptocurrencies}},
+url = {https://zerobyte.io/publications/2017-BKJGGF-pop.pdf},
+year = {2017}
+}
 
