Adding a Test for random joining node + graphs.

--- a/latex/thesis_template/thesis.tex
+++ b/latex/thesis_template/thesis.tex
@@ -698,8 +698,8 @@ plane, node insertion is possible at the beginning of every epoch
 % TODO add image
 \begin{figure}[!h] 
 \centering
-\includegraphics[width=250pt]{figures/todo}
-\caption{The simple control plane allow node to join the system}
+\includegraphics[width=400pt]{figures/JoinSubplots}
+\caption{The simple control plane allow node to join the system. The left plot represents the case with a fixed control plane where node cannot join. The ticks are placed at the start of epochs. }
 \label{fig:insertion-comparision}
 \end{figure}
 
