--- a/utils/CFF/DisplayMap.ipynb
+++ b/utils/CFF/DisplayMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,10 @@
     "        if is_line_timetable(line):\n",
     "            number, name, start_str, end_str = get_line_timetable(line)\n",
     "            name = name.strip()\n",
-    "            \n",
+    "            if name == \"Haute-Nendaz, téléca\":\n",
+    "                name = \"Haute-Nendaz, télécabine\"\n",
+    "            if name == \"Verbier, station pos\":\n",
+    "                name = \"Verbier, station poste\"\n",
     "            \n",
     "            count_cities[name.split(\",\")[0]] = count_cities.get(name.split(\",\")[0],0) + 1\n",
     "            if name in main_cities:             \n",
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +142,7 @@
        " ('Luzern', 'St. Gallen'): 52}"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 381,
    "metadata": {
     "scrolled": false
    },
@@ -818,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1509,7 @@
        " 'line_dash_array': [1, 0]}"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 384,
    "metadata": {
     "scrolled": true
    },
@@ -2528,7 +2531,7 @@
        " ...}"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2539,7 +2542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 385,
    "metadata": {
     "scrolled": false
    },
@@ -2675,7 +2678,7 @@
        "  'coordinates': [(8.31017, 47.05017), (9.369877, 47.42318)]}]"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2687,7 +2690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -2828,7 +2831,7 @@
        "</symbol>\n",
        "</g>\n",
        "</defs>\n",
-       "<g id=\"surface330\">\n",
+       "<g id=\"surface348\">\n",
        "<path d=\"M 235.292969 193.722656 C 235.292969 197.039062 232.609375 199.722656 229.292969 199.722656 C 225.980469 199.722656 223.292969 197.039062 223.292969 193.722656 C 223.292969 190.410156 225.980469 187.722656 229.292969 187.722656 C 232.609375 187.722656 235.292969 190.410156 235.292969 193.722656 \" style=\" stroke:none;fill-rule:nonzero;fill:rgb(25.098039%,25.098039%,47.843137%);fill-opacity:1;\"/>\n",
        "<path d=\"M 55.816406 405.996094 C 55.816406 409.308594 53.128906 411.996094 49.816406 411.996094 C 46.5 411.996094 43.816406 409.308594 43.816406 405.996094 C 43.816406 402.679688 46.5 399.996094 49.816406 399.996094 C 53.128906 399.996094 55.816406 402.679688 55.816406 405.996094 \" style=\" stroke:none;fill-rule:nonzero;fill:rgb(25.098039%,25.098039%,47.843137%);fill-opacity:1;\"/>\n",
        "<path d=\"M 61.640625 407.675781 C 61.640625 410.988281 58.957031 413.675781 55.640625 413.675781 C 52.328125 413.675781 49.640625 410.988281 49.640625 407.675781 C 49.640625 404.363281 52.328125 401.675781 55.640625 401.675781 C 58.957031 401.675781 61.640625 404.363281 61.640625 407.675781 \" style=\" stroke:none;fill-rule:nonzero;fill:rgb(25.098039%,25.098039%,47.843137%);fill-opacity:1;\"/>\n",
@@ -3104,7 +3107,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3163,7 +3166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -3172,7 +3175,7 @@
        "7.76210008"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3183,7 +3186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -3216,7 +3219,7 @@
        " 'Chur': (9.528925, 46.85308)}"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3227,7 +3230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 389,
    "metadata": {
     "scrolled": false
    },
@@ -3290,6 +3293,13 @@
     "\n",
     "fig.savefig('../../latex/thesis_template/figures/CFF-NewDistances.pdf')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
